[package]
name = "ipmpsc"
description = "Inter-process Multiple Producer, Single Consumer Channels"
readme = "README.md"
repository = "https://github.com/dicej/ipmpsc"
documentation = "https://docs.rs/ipmpsc/"
keywords = ["ipc", "shared"]
license = "MIT"
version = "0.4.0"
authors = ["Joel Dice <joel.dice@gmail.com>"]
edition = "2018"
include = [ "Cargo.toml", "LICENSE.md", "README.md", "src/**/*", "examples/**/*" ]

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
tempfile = "3"
memmap = "0.7"
libc = "0.2"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["synchapi"] }

[dev-dependencies]
anyhow = "1"
proptest = "0.9"
clap = "2"
serde_bytes = "0.11"

[build-dependencies]
vergen = "3"

[profile.release]
debug = true
