[package]
name = "ipmpsc"
description = "Inter-process Multiple Producer, Single Consumer Channels"
readme = "README.md"
repository = "https://github.com/dicej/ipmpsc"
documentation = "https://docs.rs/ipmpsc/"
keywords = ["ipc", "shared"]
license = "MIT"
version = "0.5.1"
authors = ["Joel Dice <joel.dice@gmail.com>"]
edition = "2018"
include = [ "Cargo.toml", "LICENSE.md", "README.md", "src/**/*", "examples/**/*" ]

[features]
fork = ["anyhow", "errno"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
tempfile = "3"
memmap2 = "0.2"
libc = "0.2"
thiserror = "1"
anyhow = { version = "1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["synchapi"] }
sha2 = "0.9"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
errno = { version = "0.2", optional = true }

[dev-dependencies]
anyhow = "1"
proptest = "0.9"
clap = "2"
serde_bytes = "0.11"

[target.'cfg(unix)'.dev-dependencies]
errno = "0.2"

[build-dependencies]
anyhow = "1"
vergen = "5"

[profile.release]
debug = true
